# cometd-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/client/: Cargo.toml
examples/client/src/: main.rs
src/: client.rs  common.rs  consts.rs  ext.rs  lib.rs  sugar.rs  types.rs
src/client/: builder.rs  command_listener.rs  connect.rs  disconnect.rs  handshake.rs  subscribe.rs
src/client/builder/: build.rs  build_channel.rs  client_task.rs
src/common/: request_builder.rs  send_request.rs
src/ext/: arc_swap.rs  make_cookie_string.rs  request_builder.rs
src/sugar/: retry.rs
src/types/: access_token.rs  command.rs  connect_response.rs  error.rs  event.rs  message.rs
src/types/access_token/: basic.rs  bearer.rs
src/types/channel/: receiver.rs
tests/: basic_auth.rs  bearer_auth.rs
