[package]
name = "cometd-client"
version = "0.2.0-beta.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BratSinot/cometd-client"
homepage = "https://github.com/BratSinot/cometd-client"
description = "Client for LongPolling CometD connections"
categories = ["web-programming"]
keywords = ["http", "cometd"]

[workspace]
members = [
    "./examples/client",
]

[features]
all = ["basic"]
basic = ["base64"]

[dependencies]
arc-swap = "1.*"
reqwest = { version = "0.11.*", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0.*", features = ["rc", "derive"] }
serde_json = "1.0.*"
serde_with = { version = "2.1.*", default-features = false, features = ["macros"] }
thiserror = "1.0.*"
tokio = { version = "1", features = ["macros"] }
url = "2.3.*"

# optional dependencies
base64 = { version = "0.20.*", optional = true }

[dev-dependencies]
cometd-client = { path = "./", features = ["all"] }
